bk_ida/gccida/g3/elimination_effects
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3132:35: error: must use 'enum' tag to refer to type 'machine_mode'
void  elimination_effects( rtx x, machine_mode mem_mode) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3147:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3147:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3158:4: error: expected ';' after expression
rtx v27; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3158:5: error: use of undeclared identifier 'v27'
rtx v27; // r11 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3163:4: error: expected ';' after expression
rtx v32; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3163:5: error: use of undeclared identifier 'v32'
rtx v32; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3213:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v41 = ( __int64)v3[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3223:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v36 = ( __int64)v3[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3230:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v36 = ( __int64)v3[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3235:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v41 = ( __int64)v3[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3301:12: error: expected ';' after expression
v3 = ( rtx)v3[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3331:1: error: use of undeclared identifier 'v16'
v16 = v3; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3334:1: error: use of undeclared identifier 'v16'
v16 = v3->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3335:17: error: use of undeclared identifier 'v16'
v4 = *( _WORD *)v16; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3336:17: error: use of undeclared identifier 'v16'
if ( *( _WORD *)v16 != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3341:84: error: use of undeclared identifier 'v16'
if ( mode_size[*( ( unsigned __int8 *)v3 + 2)] <= mode_size[*( ( unsigned __int8 *)v16 + 2)] 
                                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3343:25: error: use of undeclared identifier 'v16'; did you mean 'v11'?
&& reg_equiv_memory_loc[v16->fld[0].rtuint] ) 
                        ^~~
                        v11
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3142:18: note: 'v11' declared here
 struct rtx_def *v11; // rsi 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3348:9: error: use of undeclared identifier 'v16'; did you mean 'v11'?
rtint = v16->fld[0].rtint; 
        ^~~
        v11
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/reload1.c:3142:18: note: 'v11' declared here
 struct rtx_def *v11; // rsi 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/elimination_effects/src/obj/reload1.o] Error 1
